Cards ready and data visible in chart

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,7 @@ body {
 
 .container {
   display: flex;
-  align-items: cen;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
